Generate Class-Path property on the fly. Remove dependencies to commons-lang and commons-codec.